<?xml version="1.0"?>
<package>
  <name>robotiq_85_gazebo</name>
  <version>1.1.5</version>
  <description>
      robotiq 85 gazebo
  </description>

  
  <author>Sean Usick</author>
  <maintainer email="sean.usick@gmail.com">Sean Usick</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotiq_85_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotiq_description</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>libroboticsgroup_gazebo_mimic_joint_plugin</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  

  <export>
  </export>
</package>